--- a/index.htm
+++ b/index.htm
@@ -3,13 +3,13 @@
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Sparkler - Interactive, Faceted Data Visualization</title>
-    <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/flot/0.7/jquery.flot.min.js"></script>
+    <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.7/jquery.flot.min.js"></script>
     <!--<script language="javascript" type="text/javascript" src="../flot/jquery.flot.js"></script>-->
 	<script language="javascript" type="text/javascript" src="../flot/jquery.flot.selection.js"></script>
 	<script language="javascript" type="text/javascript" src="../flot/jquery.flot.axislabels.js"></script>
-	<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-	<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 	<script language="javascript" type="text/javascript" src="sparkler.util.js"></script>
 	<script language="javascript" type="text/javascript" src="sparkler.model.panel.js"></script>
 	<script language="javascript" type="text/javascript" src="sparkler.model.panels.js"></script>
