--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,8 @@
     <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.7/jquery.flot.min.js"></script>
     <!--<script language="javascript" type="text/javascript" src="../flot/jquery.flot.js"></script>-->
-	<script language="javascript" type="text/javascript" src="../flot/jquery.flot.selection.js"></script>
-	<script language="javascript" type="text/javascript" src="../flot/jquery.flot.axislabels.js"></script>
+	<script language="javascript" type="text/javascript" src="flot-ex/jquery.flot.selection.js"></script>
+	<script language="javascript" type="text/javascript" src="flot-ex/jquery.flot.axislabels.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 	<script language="javascript" type="text/javascript" src="sparkler.util.js"></script>
