--- a/index.htm
+++ b/index.htm
@@ -5,18 +5,17 @@
     <title>Sparkler - Interactive, Faceted Data Visualization</title>
     <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.7/jquery.flot.min.js"></script>
-    <!--<script language="javascript" type="text/javascript" src="../flot/jquery.flot.js"></script>-->
 	<script language="javascript" type="text/javascript" src="flot-ex/jquery.flot.selection.js"></script>
 	<script language="javascript" type="text/javascript" src="flot-ex/jquery.flot.axislabels.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.util.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.model.panel.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.model.panels.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.model.app.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.view.panel.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.view.app.js"></script>
-	<script language="javascript" type="text/javascript" src="sparkler.view.load.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.util.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.model.panel.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.model.panels.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.model.app.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.view.panel.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.view.app.js"></script>
+	<script language="javascript" type="text/javascript" src="js/sparkler.view.load.js"></script>
 	<script language="javascript" type="text/javascript">
 	function queryObj() {
 		var result = {}, keyValuePairs = location.search.slice(1).split('&');
