--- a/index.htm
+++ b/index.htm
@@ -63,10 +63,18 @@
 
 		})
 	</script>
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
     <link rel="stylesheet" href="main.css" type="text/css"/>
 </head>
 <body>
-    <h1>Sparkler</h1>
+	<div class="header">
+		<h1>Sparkler</h1>
+		<span class="tagline">Interactive, Faceted Data Visualization</span>
+		<div class="header-right">
+			<a class="active" href="#">Plotter</a>
+			<a href="#about">About</a>
+		</div>
+	</div>
 	<div id="sparkler"></div>
 	<h3>Selection Instructions</h3>
     <p>You may select ranges of points by clicking and dragging. Totals appear below plots</p>
