--- a/index.htm
+++ b/index.htm
@@ -71,8 +71,8 @@
 		<h1>Sparkler</h1>
 		<span class="tagline">Interactive, Faceted Data Visualization</span>
 		<div class="header-right">
-			<a class="active" href="#">Plotter</a>
-			<a href="#about">About</a>
+			<a class="active" href="/">Plotter</a>
+			<a href="about.htm">About</a>
 		</div>
 	</div>
 	<div id="sparkler"></div>
