Add more to about page

--- a/about.htm
+++ b/about.htm
@@ -36,7 +36,18 @@
             "rectangular" meaning all rows must have the same number
             of columns.
         </p>
-
+        <h2>Helper Libraries</h2>
+         <p>Sparkler uses the following javascript libraries</p>
+         <ul>
+            <li> <a href="http://www.flotcharts.org/">flot</a> - for canvas based plotting</li>
+            <li> <a href="http://backbonejs.org/">backbone</a> - model/views</li>
+            <li> <a href="https://jquery.com/">jquery</a> - for DOM interaction</li>
+            <li> <a href="http://underscorejs.org/">underscore</a> - for utility functions</li>
+        </ul>
+        <h2>Source Code</h2>
+        <p>The source code is available at
+            <a href="https://github.com/MrFlick/sparkler">github.com/MrFlick/sparkler</a>
+        </p>
     </section>
     
 </body>
